CSS fixes related to spacing of content around the top of the page.

--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ a:visited { color: #205caa; }
 /* ----------------------------------------------------------*/
 
 .page-content {
-  padding: 30px 0;
+  /*padding: 30px 0;*/
   background-color: #fff;
 }
 
@@ -144,7 +144,10 @@ a:visited { color: #205caa; }
 /* Home styles */
 /* ----------------------------------------------------------*/
 
-.home h1 { margin-bottom: 25px; }
+.home h1 {
+  margin-bottom: 25px;
+  font-size: 36px;
+}
 
 .posts { list-style-type: none; }
 
@@ -194,7 +197,6 @@ a:visited { color: #205caa; }
 .post-content h6 {
   line-height: 1;
   font-weight: 300;
-  margin: 40px 0 20px;
 }
 
 .post-content h2 {
@@ -222,9 +224,6 @@ a:visited { color: #205caa; }
   margin: 30px 0;
 }
 
-.post-content ul,
-.post-content ol { padding-left: 20px; }
-
 .post pre,
 .post code {
   border: 1px solid #d5d5e9;
@@ -238,9 +237,6 @@ a:visited { color: #205caa; }
 }
 
 .post code { padding: 1px 5px; }
-
-.post ul,
-.post ol { margin-left: 1.35em; }
 
 .post pre code {
   border: 0;
